# LLMOps

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
app/api/: dependencies.py  main.py  middleware.py
app/core/: audit.py  auth.py  config.py  exceptions.py  logging.py  metrics.py  security.py
app/domain/: models.py  ports.py
benchmarks/: LOAD_TEST.md  injection_eval_results.json  injection_test_set.json  locustfile.py  verifier_comparison.csv
data/: audit.jsonl  corpus_state.json
docs/: 01_solution_overview.md  02_target_architecture.md  03_file_by_file_guide.md  04_function_reference.md  05_deployment_and_mlop.md  06_security_and_guardrails.md  07_operations_runbook.md  09_threat_model.md  INJECTION_EVAL.md  RUNBOOK.md  SLO.md  VERIFICATION_UPGRADE.md
evaluation/: GOLDEN_QA_SPEC.md  injection_eval_set.json  nli_shadow_results.json
model_registry/: PROMOTION_DEMO.md
pipelines/: ingest_pipeline.py  run_evaluation.py  run_finetune.py
scripts/: _build_injection_eval_set.py  compare_verifiers.py  eval_injection.py  injection_eval.py  nli_shadow_eval.py  promotion_gate_demo.py  replay_audit.py
tests/: conftest.py  test_corpus_service.py  test_evaluation_service.py  test_failure_modes.py  test_full_query_pipeline.py  test_generation_service.py  test_health.py  test_ingest_pipeline.py  test_job_service.py  test_model_registry.py  test_nli_verifier.py  test_policy_service.py  test_query_api.py  test_reranker_service.py  test_retrieval_service.py  test_verification_service.py
(+55 files in other folders)
