[project]
name = "llm-ops"
version = "0.1.0"
description = "Governance-forward RAG reference architecture: policy guardrails, corpus lifecycle, model promotion gates, and an append-only audit trail. Single-node demo."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "scikit-learn>=1.5.0",
  "httpx>=0.27.0",
  "structlog>=24.0.0",
  "prometheus-client>=0.21.0",
  "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "respx>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["app*", "pipelines*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: integration tests requiring model downloads"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]  # B008: Depends() in defaults is standard FastAPI DI pattern

[tool.ruff.lint.per-file-ignores]
"app/api/routes/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "single"
